tolk-tester/tests/invalid-syntax/err-3357.tolk
fun main() {
    return ton("1000000000");
}

/**
@compilation_should_fail
@stderr argument is too big and leads to overflow
 */
